test/fails/test1.jl
# it will be failed on the next file

using Test

@test true
